small-code-quality-improvements Made small code quality improvements.